third_party/move/move-compiler-v2/tests/checking/typing/index_err.exp

Diagnostics:
error: indexing is only allowed for resource or vector
   ┌─ tests/checking/typing/index_err.move:14:9
   │
14 │         UNUSED_Test[@0x1];
   │         ^^^^^^^^^^^^^^^^^

error: indexing is only allowed for resource or vector
   ┌─ tests/checking/typing/index_err.move:19:9
   │
19 │         &test::UNUSED_Test[@0x1];
   │         ^^^^^^^^^^^^^^^^^^^^^^^^
